--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
   },
-  "engines" : {
+  "engines": {
     "npm": "5.6.0",
     "node": "8.11.4"
   }
