--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
@@ -28,8 +29,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "http://localhost:5000",
-  "engines" : {
+  "proxy": "http://localhost:5000",
+  "engines": {
     "npm": "5.6.0",
     "node": "8.11.4"
   }
